--- a/src/style.css
+++ b/src/style.css
@@ -1,17 +1,37 @@
+*,
+*::before,
+*::after {
+  margin: 0;
+}
+
+body {
+  display: grid;
+  place-items: center;
+}
+
+h1 {
+  margin-bottom: 24px;
+}
+
 .container {
-  width: 500px;
+  width: fit-content;
+  max-width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 24px;
 }
 
 .board {
   width: fit-content;
   background-color: #bfbfbd;
   display: grid;
-  grid-template-columns: repeat(30, 1fr);
-  margin-left: 50px;
-  margin-top: 20px;
+  grid-template-columns: repeat(var(--width), 1fr);
+  margin: 16px 0;
 }
 
-button {
+button:not(.reset) {
   border-radius: 0;
   width: 25px;
   height: 25px;
@@ -37,8 +57,4 @@ button {
 
 .four {
   color: purple;
-}
-
-.bomb {
-  background-color: green;
 }
